# google_ffi_dart_tutorial

./: README-template.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/google_ffi_dart_tutorial_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: google_ffi_dart_tutorial.podspec
lib/: google_ffi_dart_tutorial.dart  google_ffi_dart_tutorial_bindings_generated.dart
linux/: CMakeLists.txt
macos/: google_ffi_dart_tutorial.podspec
macos/Classes/: google_ffi_dart_tutorial.c
src/: CMakeLists.txt  google_ffi_dart_tutorial.c
windows/: CMakeLists.txt
